updated HabiticaApiTests.java